[package]
name = "magic_rug"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.3"
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
default = []
bevy_debug_stepping = ["bevy/bevy_debug_stepping"]
